website/src/css/custom.scss
/* ... */
h5 {
	font-family: Fira Sans;
	font-style: normal;
	font-weight: 700;
	font-size: 17px;
	line-height: 25px;
	/* identical to box height, or 147% */
	letter-spacing: 0.3px;
}

h1 {
	font-family: Montserrat;
	font-style: normal;
	font-weight: 700;
	font-size: 40px;
	line-height: 56px;
	/* identical to box height, or 140% */

	text-transform: capitalize;
}

.docusaurus-highlight-code-line {
	background-color: rgb(72, 77, 91);
	display: block;
	margin: 0 calc(-1 * var(--ifm-pre-padding));
	padding: 0 var(--ifm-pre-padding);
}
__docusaurus {
	background: var(--ifm-color-primary) !important;
}

.main-wrapper:before {
	content: ' ';
	top: 0;
	left: 0;
	width: 100%;
	height: 110px;
	position: absolute;
	background: #1a1e44;
	z-index: -1;
}

.navbar .navbar--fixed-top {
	background: rgb(72, 77, 91);
}
// body {
// 	background-image: url('../../static/img/hero-background.png');
// 	background-repeat: no-repeat;
// 	background-attachment: fixed;
// 	background-position: top;
// 	background-size: cover;
// 	z-index: 0;
// }
// Navbar
.navbar {
	background: transparent;
	height: 110px;
	padding-left: 7%;
	padding-right: 7%;
	box-shadow: none !important;
	@media (min-width: 1440px) {
		padding-left: 10%;
		padding-right: 10%;
	}
}

.navbar__items {
	flex-direction: unset;
	justify-content: unset;

	@media (max-width: 960px) {
		flex-direction: row-reverse;
		justify-content: space-between;
		.navbar__toggle {
			svg {
				path {
					stroke: var(--ifm-white) !important;
				}
			}
		}
	}
}

.navbar-sidebar {
	.navbar-sidebar__brand {
		padding-top: 50px;
		padding-bottom: 50px;
		background-color: var(--ifm-color-primary) !important;
	}

	.navbar-sidebar__items {
		padding-top: 30px;
	}

	max-width: 320px;

	.menu__list-item {
		max-width: 280px;
		padding-bottom: 5px;
	}

	.menu__list-item:nth-of-type(3) {
		width: fit-content;
		order: 0 !important;
	}

	.menu__link--active {
		color: var(--ifm-white) !important;
	}
	.button_link {
		width: fit-content;
	}
}
.navbar--fixed-top {
	position: absolute;
	width: 100%;
	top: 0;
	left: 0;
}

.header-github-link:before {
	background: url('../../static/img/githubSVG-yellow.svg') no-repeat;
	content: '';
	display: flex;
	height: 30px;
	width: 30px;
	padding-right: 15px;
}

.button_link {
	background-color: var(--ifm-color-button);
	border-radius: 20px;
	margin-left: 15px;
	margin-right: 15px;
	color: var(--ifm-color-primary) !important;

	&:hover {
		color: var(--ifm-white) !important;
	}
}
.navbar__logo {
	height: 50px;
	width: 195px;
}

/* Footer styles */

.footer {
	background: linear-gradient(132.76deg, #a13455 -80.79%, #1a1e44 54.08%);
	/* base-shadow */

	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
	padding-top: 80px;
	padding-bottom: 15px;
	position: relative;
	border-top: 2px solid var(--ifm-border-color);
	display: flex;
	justify-content: center;
	width: 100%;
}

.footer__title {
	white-space: nowrap;
	margin-bottom: 11px;
	font-family: Fira Sans;
	font-style: normal;
	font-weight: 700;
	font-size: 17px;
	line-height: 25px;
	/* identical to box height, or 147% */

	letter-spacing: 0.3px;
}

.footer .container {
	display: flex;
	flex-direction: row-reverse;
	justify-content: space-between;
	width: 100%;
	margin-left: 0px !important;
	margin-right: 0px !important;
	margin-bottom: 40px;
}

.footer__links {
	display: flex;
	flex-direction: row-reverse;
	justify-content: space-between;
	flex-wrap: wrap;
	width: 100%;
	flex: 0 0 0 0;
	color: var(--ifm-white) !important;
	padding-bottom: 20px;
}

/* Remove bullets/padding from footer lists */
.footer__items {
	list-style: none;
	margin: 0;
	padding-left: 0;
}
.footer__item {
	list-style: none;
}

.footer__links .footer__col {
	flex: unset;
	padding-left: 0px !important;
	padding-right: 0px !important;
}

.footer__links > div:nth-of-type(1) {
	width: 15%;
}

.footer__item {
	font-family: Fira Sans;
	font-style: normal;
	font-weight: normal;
	font-weight: 400;
	font-size: 16px;
	line-height: 25px;

	a {
		width: fit-content;
		color: var(--ifm-white) !important;

		&:hover {
			color: var(--ifm-white) !important;
			text-decoration: none !important;
		}
	}

	.footerButton {
		color: var(--ifm-color-primary) !important;

		&:hover {
			color: var(--ifm-white) !important;
			text-decoration: none !important;
		}
	}
}

.footer__links > div:nth-of-type(2) {
	width: 15%;
}

.footer__links > div:nth-of-type(3) {
	width: 15%;

	@media (max-width: 996px) {
		margin-right: auto;
	}
}

.footer__links > div:nth-of-type(4) {
	width: 45%;
}

.footer__bottom {
	display: none;
}

.footerButtonContainer {
	margin-bottom: 20px;
}

.footerDescription {
	font-family: Fira Sans;
	font-style: normal;
	font-weight: 400;
	font-size: 14px;
	line-height: 18px;
	color: var(--ifm-white);
	/* or 129% */
	max-width: 250px;
	letter-spacing: 0.3px;
	margin-bottom: 30px;
	padding-top: 20px;
	color: var(--ifm-white) !important;
}

.footer__copyright {
	width: 100%;
	position: absolute;
	bottom: 0;
	left: 0;
	font-family: Fira Sans;
	font-style: normal;
	font-weight: 400;
	font-size: 14px;
	line-height: 18px;
	border-top: 2px solid var(--ifm-border-color);
	padding: 20px 40px;
	color: var(--ifm-white) !important;
	padding-left: 7%;
	padding-right: 7%;
}

.footerButton {
	height: fit-content;
	white-space: nowrap;
	display: flex;
	align-items: center;
	background-color: var(--ifm-color-button);
	padding: 12px 18px;
	border-radius: 0px;
	margin-right: 15px;
	color: var(--ifm-color-primary) !important;
	border-radius: 2px;

	&:hover {
		color: var(--ifm-white) !important;
		text-decoration: none !important;
	}

	margin-bottom: 50px !important;
	font-family: Montserrat;
	font-style: normal;
	font-weight: 600;
	font-size: 15px;
	line-height: 22px;
	letter-spacing: 0.3px;
}
.footerButton:before {
	background: url('../../static/img/githubSVG.svg') no-repeat;
	content: '';
	display: flex;
	width: 24px;
	height: 23px;
	padding-right: 9px;
}

.footerForm {
	width: 100%;
	margin-top: 50px;
}
/* ... */

